kubernetes/flux2/gcp/dev/lyfted/app1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lyfted-1
  namespace: lyfted
spec:
  selector:
    app: lyfted-1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
