kubernetes/flux2/gcp/dev/lyfted/app1/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lyfted-1
  namespace: lyfted
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    external-dns.alpha.kubernetes.io/hostname: lyfted-1.dev.k8s.managedkube.com
spec:
  tls:
  - hosts:
    - lyfted-1.dev.k8s.managedkube.com
    secretName: cert-manager-tls-cert
  rules:
    - host: lyfted-1.dev.k8s.managedkube.com
      http:
        paths:
        - path: /
          backend:
            serviceName: lyfted-1
            servicePort: 8080
